# comfyUI-DeepSeek-2lab

./: .gitignore  LICENSE  README.md  __init__.py  config.json  constants.py  deepseek.py  pyproject.toml
workflow/: simple_chat.json
