[project]
name = "comfyui-deepseek-2lab"
description = "Unofficial implementation of DeepSeek for ComfyUI"
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/AI2lab/comfyUI-DeepSeek-2lab"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ai2lab"
DisplayName = "comfyUI-DeepSeek-2lab"
Icon = ""
